# lawyeredAI

./: .gitignore  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml
backend/: main.py
backend/api/routes/: auth.py  cases.py  chat.py  demand_notice.py  payment.py
backend/config/: settings.py
backend/mcp/: server.py
backend/models/: case.py  chat.py  demand_notice.py
backend/services/: ai_service.py  auth_service.py  court_listener.py  demand_notice_generator.py  honcho_service.py  payment_service.py
context/plans/: mcp-server-design.md
context/summaries/: courtlistener-api-docs.md  project_summary.md
frontend/: .env.example  auth.js  index.html  login.html  payment-cancel.html  payment-success.html  script.js  style.css
frontend/web/: layout.tsx  middleware.ts  page.tsx
frontend/web/api/flowglad/[...path]/: route.ts
frontend/web/billing/: page.tsx
frontend/web/sign-in/: page.tsx
frontend/web/src/: flowglad.ts
frontend/web/src/supabase/: server.ts
mcp/courtlistener-mcp/: .env.example  README.md  index.js  requirements.txt  server.py  test_server.py
mcp/courtlistener-mcp/data/kb/: consumer_rights_common.md  faq_quick.md  nyc_fees.md  nyc_filing_steps.md  nyc_overview.md  nyc_service_of_process.md  nyc_venue_addresses.md
mcp/courtlistener-mcp/data/kb/templates/: demand_letter.md  statement_of_claim.md
mcp/courtlistener-mcp/node-impl/: README.md  index.js  package-lock.json  package.json
